--- a/Order66/Order66.csproj
+++ b/Order66/Order66.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Entity\Food.cs" />
+    <Compile Include="Entity\KART.cs" />
     <Compile Include="Entity\User.cs" />
     <Compile Include="InfoItem.xaml.cs">
       <DependentUpon>InfoItem.xaml</DependentUpon>
