--- a/Order66/Order66.csproj
+++ b/Order66/Order66.csproj
@@ -64,6 +64,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddItem.xaml.cs">
+      <DependentUpon>AddItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Entity\Food.cs" />
     <Compile Include="Entity\KART.cs" />
     <Compile Include="Entity\User.cs" />
@@ -87,6 +90,10 @@
     <Compile Include="ShopList.xaml.cs">
       <DependentUpon>ShopList.xaml</DependentUpon>
     </Compile>
+    <Page Include="AddItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="InfoItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
